--- a/src/template/email_confirm_letter.pug
+++ b/src/template/email_confirm_letter.pug
@@ -157,7 +157,9 @@ table.full-width-container(border='0' cellpadding='0' cellspacing='0' height='10
                         // / Hero subheader
                         table.container.hero-subheader(border='0' cellpadding='0' cellspacing='0' width='620' style='width: 620px;')
                             tr
-                                td.hero-subheader__title(style='font-size: 43px; font-weight: bold; padding: 80px 0 15px 0;' align='left') #{code}
+                                td.hero-subheader__title(style='font-size: 43px; font-weight: bold; padding: 40px 0 15px 0;' align='left')
+                                    a(href=`https://mscrm.org/activation?code=${code}`)
+                                        div Your code: #{code}
                             tr
                                 td.hero-subheader__content(style='font-size: 16px; line-height: 27px; color: #969696; padding: 0 60px 90px 0;' align='left')
                                     | Your confirmation code
