--- a/src/template/email_restore_letter.pug
+++ b/src/template/email_restore_letter.pug
@@ -152,7 +152,7 @@ table.full-width-container(border='0' cellpadding='0' cellspacing='0' height='10
                         table.container.header(border='0' cellpadding='0' cellspacing='0' width='620' style='width: 620px;')
                             tr
                                 td(style='padding: 30px 0 30px 0; border-bottom: solid 1px #eeeeee;' align='left')
-                                    a(href='#' style='font-size: 30px; text-decoration: none; color: #000000;') Your confirmation code
+                                    a(href='#' style='font-size: 30px; text-decoration: none; color: #000000;') Your restore code
                         // /// Header
                         // / Hero subheader
                         table.container.hero-subheader(border='0' cellpadding='0' cellspacing='0' width='620' style='width: 620px;')
@@ -162,4 +162,4 @@ table.full-width-container(border='0' cellpadding='0' cellspacing='0' height='10
                                         div Your code: #{code}
                             tr
                                 td.hero-subheader__content(style='font-size: 16px; line-height: 27px; color: #969696; padding: 0 60px 90px 0;' align='left')
-                                    | Your confirmation code
+                                    | Your restore code
